[gd_scene load_steps=5 format=3 uid="uid://dhealthpickup_scene"]

[ext_resource type="Script" path="res://src/items/HealthPickup.gd" id="1_healthpickup"]

[sub_resource type="CircleShape2D" id="CircleShape2D_health"]
radius = 22.0

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Placeholder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pickup"]
resource_name = "pickup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.5, 1.5, 0.5, 1), Color(0.5, 1.5, 0.5, 0)]
}

[node name="HealthPickup" type="Area2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_healthpickup")
item_name = "Health Pack"
item_type = "health"
bob_height = 4.0
bob_speed = 2.5
glow_color = Color(0.3, 1, 0.5, 0.5)
glow_intensity = 1.4

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Placeholder" type="ColorRect" parent="Sprite2D"]
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
color = Color(1, 0.3, 0.3, 1)

[node name="CrossV" type="ColorRect" parent="Sprite2D"]
offset_left = -4.0
offset_top = -10.0
offset_right = 4.0
offset_bottom = 10.0
color = Color(1, 1, 1, 1)

[node name="CrossH" type="ColorRect" parent="Sprite2D"]
offset_left = -10.0
offset_top = -4.0
offset_right = 10.0
offset_bottom = 4.0
color = Color(1, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_health")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": null
}
